updates to quill formatting, fixed alignment issues for published stories, fixed section delete bugs

--- a/src/App.css
+++ b/src/App.css
@@ -384,7 +384,7 @@ body {
 
 .workspace-button {
   padding: 20px;
-  margin-right: 10px;
+  margin-right: 20px;
   margin-left: 20px;
 }
 
